--- a/WorldTrotter/WorldTrotter/Info.plist
+++ b/WorldTrotter/WorldTrotter/Info.plist
@@ -4,6 +4,10 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>World Trotter Would Like to Access Your Location</string>
+    <key>NSLocationWhenInUseUsageDescription</key>
+    <string>World Trotter Would Like to Access Your Location</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
